<?xml version="1.0"?>
<package>
  <name>phoenix_imu</name>
  <version>0.1.0</version>
  <description>The imu package for the phoenix quadrocopter</description>

  <maintainer email="tatsch@gmail.com">Julian Tatsch</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
